--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     </div>
   </nav>
   
-  <header>
-    <div id="home" id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <header id="home">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
